[build-system]
requires = ["setuptools>=68", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "chrono"
dynamic = ["version"]
description = "Time related utilities"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
include = ["chrono*"]

[tool.setuptools_scm]